@@ -1,3 +1,10 @@
+TAG: ?
+DATE: 07/13/2015
+STAFF: kstone
+CHANGES:
+1) Removed logMirroredFiles.csh/py
+
+
 TAG: radardbutilities-tr11750-MP
 DATE: 07/01/2015
 STAFF: lec
